Source/Alternet.UI.Pal/Api/RichTextBox.Api.h

ALTERNET_UI_API c_bool RichTextBox_SetStyleEx_(RichTextBox* obj, int64_t startRange, int64_t endRange, void* style, int flags)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SetStyleEx(startRange, endRange, style, flags);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_SetListStyle_(RichTextBox* obj, int64_t startRange, int64_t endRange, void* def, int flags, int startFrom, int specifiedLevel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SetListStyle(startRange, endRange, def, flags, startFrom, specifiedLevel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_SetListStyle2_(RichTextBox* obj, int64_t startRange, int64_t endRange, const char16_t* defName, int flags, int startFrom, int specifiedLevel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SetListStyle2(startRange, endRange, defName, flags, startFrom, specifiedLevel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_ClearListStyle_(RichTextBox* obj, int64_t startRange, int64_t endRange, int flags)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->ClearListStyle(startRange, endRange, flags);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_NumberList_(RichTextBox* obj, int64_t startRange, int64_t endRange, void* def, int flags, int startFrom, int specifiedLevel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->NumberList(startRange, endRange, def, flags, startFrom, specifiedLevel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_NumberList2_(RichTextBox* obj, int64_t startRange, int64_t endRange, const char16_t* defName, int flags, int startFrom, int specifiedLevel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->NumberList2(startRange, endRange, defName, flags, startFrom, specifiedLevel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_PromoteList_(RichTextBox* obj, int promoteBy, int64_t startRange, int64_t endRange, void* def, int flags, int specifiedLevel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->PromoteList(promoteBy, startRange, endRange, def, flags, specifiedLevel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_PromoteList2_(RichTextBox* obj, int promoteBy, int64_t startRange, int64_t endRange, const char16_t* defName, int flags, int specifiedLevel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->PromoteList2(promoteBy, startRange, endRange, defName, flags, specifiedLevel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_Delete_(RichTextBox* obj, int64_t startRange, int64_t endRange)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->Delete(startRange, endRange);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_WriteTable_(RichTextBox* obj, int rows, int cols, void* tableAttr, void* cellAttr)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->WriteTable(rows, cols, tableAttr, cellAttr);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void RichTextBox_SetBasicStyle_(RichTextBox* obj, void* style)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetBasicStyle(style);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_GetBasicStyle_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetBasicStyle();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_BeginStyle_(RichTextBox* obj, void* style)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->BeginStyle(style);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_HasCharacterAttributes_(RichTextBox* obj, int64_t startRange, int64_t endRange, void* style)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->HasCharacterAttributes(startRange, endRange, style);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_GetStyleSheet_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetStyleSheet();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void RichTextBox_SetAndShowDefaultStyle_(RichTextBox* obj, void* attr)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetAndShowDefaultStyle(attr);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void RichTextBox_SetSelectionRange_(RichTextBox* obj, int64_t startRange, int64_t endRange)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelectionRange(startRange, endRange);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API PointI_C RichTextBox_PositionToXY_(RichTextBox* obj, int64_t pos)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<PointI_C>([&](){
    #endif
        return obj->PositionToXY(pos);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_WriteTextBox_(RichTextBox* obj, void* textAttr)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->WriteTextBox(textAttr);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_HasParagraphAttributes_(RichTextBox* obj, int64_t startRange, int64_t endRange, void* style)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->HasParagraphAttributes(startRange, endRange, style);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_SetProperties_(RichTextBox* obj, int64_t startRange, int64_t endRange, void* properties, int flags)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SetProperties(startRange, endRange, properties, flags);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void RichTextBox_SetTextCursor_(RichTextBox* obj, void* cursor)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetTextCursor(cursor);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_GetTextCursor_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetTextCursor();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void RichTextBox_SetURLCursor_(RichTextBox* obj, void* cursor)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetURLCursor(cursor);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_GetURLCursor_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetURLCursor();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_GetSelection_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetSelection();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_GetContextMenuPropertiesInfo_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetContextMenuPropertiesInfo();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void RichTextBox_SetSelection2_(RichTextBox* obj, void* sel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelection2(sel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_WriteImage_(RichTextBox* obj, Image* bitmap, int bitmapType, void* textAttr)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->WriteImage(bitmap, bitmapType, textAttr);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_WriteImage2_(RichTextBox* obj, const char16_t* filename, int bitmapType, void* textAttr)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->WriteImage2(filename, bitmapType, textAttr);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_WriteImage3_(RichTextBox* obj, void* imageBlock, void* textAttr)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->WriteImage3(imageBlock, textAttr);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_WriteField_(RichTextBox* obj, const char16_t* fieldType, void* properties, void* textAttr)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->WriteField(fieldType, properties, textAttr);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_CanDeleteRange_(RichTextBox* obj, void* container, int64_t startRange, int64_t endRange)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->CanDeleteRange(container, startRange, endRange);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool RichTextBox_CanInsertContent_(RichTextBox* obj, void* container, int64_t pos)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->CanInsertContent(container, pos);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* RichTextBox_GetBuffer_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetBuffer();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int64_t RichTextBox_DeleteSelectedContent_(RichTextBox* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int64_t>([&](){
    #endif
        return obj->DeleteSelectedContent();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}